--- a/admin/listcategory.html
+++ b/admin/listcategory.html
@@ -11,7 +11,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/listcategory.css">
+    <link rel="stylesheet" href="../css/listcategory.css">
+    <link rel="stylesheet" href="../css/admin.css">
 </head>
 <body>
 
@@ -35,7 +36,7 @@
     <a href="booksBorrowed.html">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
      <a href="accountManagement.html">Account Management</a>
-    <a href="login.html">Logout</a>
+     <a href="../login.html">Logout</a>
   </div>
 
 <!-- Wrapper -->
@@ -65,7 +66,7 @@
             <tr>
                 <td>1</td>
                 <td>Literature</td>
-                <td>
+                <td class="actions">
                   <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                   <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                 </td>
@@ -73,7 +74,7 @@
             <tr>
                 <td>2</td>
                 <td>Science</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -81,7 +82,7 @@
             <tr>
                 <td>3</td>
                 <td>History</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -89,7 +90,7 @@
             <tr>
                 <td>4</td>
                 <td>Children</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -97,7 +98,7 @@
             <tr>
                 <td>5</td>
                 <td>Mentality</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -105,7 +106,7 @@
             <tr>
                 <td>6</td>
                 <td>Economy</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -113,7 +114,7 @@
             <tr>
                 <td>7</td>
                 <td>Life Skills</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -121,7 +122,7 @@
             <tr>
                 <td>8</td>
                 <td>Sport</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -173,7 +174,7 @@
     </div>
   </div>  
 
-  <script src="js/listcategory.js">
+  <script src="../js/listcategory.js">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
