--- a/about.html
+++ b/about.html
@@ -54,6 +54,7 @@
                     <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="policy.html">Policy</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="typography.html">Style Guide</a></li>
                 </ul>
                 <div class="search-bar ms-3 d-flex">
                     <input type="text" class="form-control" placeholder="Search book, author...">
