--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,7 +6,7 @@
   <title>Admin Book Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="../css/admin.css">
 </head>
 <body>
 
@@ -27,13 +27,10 @@
     <a href="listcategory.html">Category</a>
     <a href="locationlibrary.html" >Location</a>
     <a href="listBook.html">Books</a>
-    <a href="booksBorrowed.html">Books Borrowed</a>
+    <a href="booksBorrowed.html" >Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
-     <a href="accountManagement.html">Account Management</a>
-    <a href="login.html">Logout</a>
-
-   
-
+    <a href="accountManagement.html">Account Management</a>
+    <a href="../login.html">Logout</a>
   </div>
 
   <!-- Content -->
@@ -95,7 +92,7 @@
     
   </div>
 
-  <script src="js/admin.js"></script>
+  <script src="../js/admin.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
