--- a/admin/booksRetuned.html
+++ b/admin/booksRetuned.html
@@ -6,7 +6,8 @@
   <title>Books Returned</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
-  <link rel="stylesheet" href="css/listBook.css">
+  <link rel="stylesheet" href="../css/listBook.css">
+  <link rel="stylesheet" href="../css/admin.css">
  
 </head>
 <body>
@@ -30,7 +31,7 @@
     <a href="booksBorrowed.html" >Books Borrowed</a>
     <a href="booksRetuned.html" class="active">Books Returned</a>
      <a href="accountManagement.html">Account Management</a>
-    <a href="login.html">Logout</a>
+     <a href="../login.html">Logout</a>
 
   </div>
 
@@ -323,6 +324,6 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/booksReturned.js"></script>
+  <script src="../js/booksReturned.js"></script>
 </body>
 </html>
