--- a/admin/locationlibrary.html
+++ b/admin/locationlibrary.html
@@ -11,7 +11,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/locationlibrary.css">
+    <link rel="stylesheet" href="../css/locationlibrary.css">
+    <link rel="stylesheet" href="../css/admin.css">
 </head>
 <body>
 
@@ -35,7 +36,7 @@
     <a href="booksBorrowed.html">Books Borrowed</a>
     <a href="booksRetuned.html">Books Returned</a>
      <a href="accountManagement.html">Account Management</a>
-    <a href="login.html">Logout</a>
+     <a href="../login.html">Logout</a>
 
    
 
@@ -67,7 +68,7 @@
                 <td>1</td>
                 <td>Ho Chi Minh City General Library</td>
                 <td>69 Ly Tu Trong, Ben Nghe Ward, District 1, HCMC</td>
-                <td>
+                <td class="actions">
                   <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                   <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                 </td>
@@ -76,7 +77,7 @@
                 <td>2</td>
                 <td>Ho Chi Minh City Scientific and Technical Library</td>
                 <td>159 Nguyen Dinh Chieu, Ward 6, District 3, HCMC</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -85,7 +86,7 @@
                 <td>3</td>
                 <td>Ho Chi Minh University of Social Sciences and Humanities Library</td>
                 <td>10-12 Dinh Tien Hoang, Ben Nghe Ward, District 1, HCMC</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -94,7 +95,7 @@
                 <td>4</td>
                 <td>Vietnam National University Library, HCMC</td>
                 <td>282 Nguyen Chi Thanh, Ward 5, District 10, HCMC</td>
-                <td>
+                <td class="actions"> 
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -103,7 +104,7 @@
                 <td>5</td>
                 <td>District 1 Library</td>
                 <td>76 Le Thanh Ton, Ben Thanh Ward, District 1, HCMC</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -112,7 +113,7 @@
                 <td>6</td>
                 <td>District 5 Library</td>
                 <td>76 Nguyen Bieu, Ward 1, District 5, HCMC</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -121,7 +122,7 @@
                 <td>7</td>
                 <td>Ho Chi Minh City Youth Library</td>
                 <td>69 Le Thi Rieng, Ben Thanh Ward, District 1, HCMC</td>
-                <td>
+                <td class="actions">
                     <button class="btn btn-danger btn-sm delete-btn">Delete</button> 
                     <button class="btn btn-warning btn-sm edit-btn">Edit</button>
                   </td>
@@ -131,7 +132,7 @@
     </div>
   </div>
   
-  <!-- Modal Add Book -->
+ 
 <div class="modal fade" id="addBookModal" tabindex="-1" aria-labelledby="addBookModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -156,7 +157,7 @@
     </div>
   </div>
   
-  <!-- Modal Edit Book -->
+ 
   <div class="modal fade" id="editBookModal" tabindex="-1" aria-labelledby="editBookModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -181,7 +182,7 @@
     </div>
   </div>  
 
-  <script src="js/locationlibrary.js">
+  <script src="../js/locationlibrary.js">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
