--- a/admin/accountManagement.html
+++ b/admin/accountManagement.html
@@ -6,11 +6,11 @@
   <title>Account Management</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="../css/accountManagement.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="../css/admin.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" href="../css/admin.css">
+  <link rel="stylesheet" href="../css/accountManagement.css">
 </head>
 <body>
 
@@ -45,12 +45,12 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="admin.html">Admin</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Books</li>
+          <li class="breadcrumb-item active" aria-current="page">Account Management</li>
         </ol>
       </nav>
-      <h1>Books</h1>
-      <button id="addBookBtn" class="btn btn-primary mb-3">Add Account</button>
-      <table id="bookTable" class="display">
+      <h1>Account Management</h1>
+      <button id="addAccountBtn" class="btn btn-primary mb-3">Add Account</button>
+      <table id="accountTable" class="display">
         <thead>
           <tr>
             <th>ID</th>
@@ -95,50 +95,50 @@
     </div>
   </div>
   
-  <!-- Modal Add Book -->
-<div class="modal fade" id="addBookModal" tabindex="-1" aria-labelledby="addBookModalLabel" aria-hidden="true">
+  <!-- Modal Add Account -->
+<div class="modal fade" id="addAccountModal" tabindex="-1" aria-labelledby="addAccountModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="addBookModalLabel">Add New Account</h5>
+          <h5 class="modal-title" id="addAccountModalLabel">Add New Account</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <form id="addBookForm">
+          <form id="addAccountForm">
             <div class="mb-3">
-              <label for="bookTitle" class="form-label">Username</label>
-              <input type="text" class="form-control" id="bookTitle" required>
+              <label for="accountUsername" class="form-label">Username</label>
+              <input type="text" class="form-control" id="accountUsername" required>
             </div>
             <div class="mb-3">
-              <label for="bookAuthor" class="form-label">Email</label>
-              <input type="text" class="form-control" id="bookAuthor" required>
+              <label for="accountEmail" class="form-label">Email</label>
+              <input type="text" class="form-control" id="accountEmail" required>
             </div>
-            <button type="submit" class="btn btn-primary">Add Account</button> <!-- Add Book button -->
+            <button type="submit" class="btn btn-primary">Add Account</button>
           </form>
         </div>
       </div>
     </div>
   </div>
   
-  <!-- Modal Edit Book -->
-  <div class="modal fade" id="editBookModal" tabindex="-1" aria-labelledby="editBookModalLabel" aria-hidden="true">
+  <!-- Modal Edit Account -->
+  <div class="modal fade" id="editAccountModal" tabindex="-1" aria-labelledby="editAccountModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="editBookModalLabel">Edit Account</h5>
+          <h5 class="modal-title" id="editAccountModalLabel">Edit Account</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <form id="editBookForm">
+          <form id="editAccountForm">
             <div class="mb-3">
-              <label for="editBookTitle" class="form-label">Username</label>
-              <input type="text" class="form-control" id="editBookTitle" required>
+              <label for="editAccountUsername" class="form-label">Username</label>
+              <input type="text" class="form-control" id="editAccountUsername" required>
             </div>
             <div class="mb-3">
-              <label for="editBookAuthor" class="form-label">Email</label>
-              <input type="text" class="form-control" id="editBookAuthor" required>
+              <label for="editAccountEmail" class="form-label">Email</label>
+              <input type="text" class="form-control" id="editAccountEmail" required>
             </div>
-            <button type="submit" class="btn btn-primary">Save Changes</button> <!-- Save Changes button -->
+            <button type="submit" class="btn btn-primary">Save Changes</button>
           </form>
         </div>
       </div>
